--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "nodejs-leetcode",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
-    "tsc": "tsc --project tsconfig.json"
+    "tsc": "tsc --project tsconfig.json",
+    "test": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage"
   },
   "dependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.27",
+    "jest": "^29.7.0",
     "typescript": "^5.4.2"
   }
 }
