--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "license": "MIT",
   "scripts": {
     "tsc": "tsc --project tsconfig.json",
-    "test": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage"
+    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules' jest --coverage"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "typescript": "^5.4.2"
   }
