--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "tsc": "tsc --project tsconfig.json",
-    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules' jest --coverage"
+    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules' jest --coverage --colors"
   },
   "dependencies": {
     "cross-env": "^7.0.3",
